added Oauth flow to frontend

--- a/src/SASS/main.scss
+++ b/src/SASS/main.scss
@@ -81,11 +81,11 @@ Header > h1 {
 	font-size: larger;
 }
 
-.main_content {
-}
+// .main_content {
+// }
 
-.ant_drawer {
-}
+// .ant_drawer {
+// }
 
 @media only screen and (max-width: 600px) {
 	.movie_card_container {
