--- a/src/Sass/media_details.scss
+++ b/src/Sass/media_details.scss
@@ -27,10 +27,12 @@ h6 {
 	margin: 0px;
 	-webkit-tap-highlight-color: rgba(255, 255, 255, 0.1);
 }
-
-.media_details {
+.ant-layout-content {
+	margin: 0 1rem;
+}
+.media_details_wrapper {
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 
 	.media_info_wrapper {
 		display: flex;
@@ -38,17 +40,17 @@ h6 {
 	}
 }
 .album_player {
-	margin-top: -6rem;
-	margin-bottom: 1rem;
-	width: 100%;
-	height: 4rem;
+	width: 87%;
+	height: 5rem;
+	margin: 1.5rem 1rem;
+	margin-top: -5rem;
 }
 
-.playlist_player {
-	margin-top: -6rem;
-	margin-bottom: 1rem;
-	width: 100%;
-	height: 4rem;
+.playlist_player::after {
+	width: 87%;
+	height: 5rem;
+	margin: 1.5rem 1rem;
+	margin-top: -5rem;
 }
 
 .track_wrapper {
@@ -57,9 +59,9 @@ h6 {
 }
 
 .video_wrapper {
-	width: 100%;
-	height: 4rem;
-	margin-bottom: 0.7rem;
+	width: 32%;
+	height: 5rem;
+	margin: 0.4rem 0.3rem;
 }
 .video_wrapper:hover {
 	background-color: rgba(255, 255, 255, 0.3);
@@ -68,7 +70,7 @@ h6 {
 .info_wrapper {
 	display: flex;
 	flex-direction: row;
-	align-items: self-end;
+	align-items: center;
 
 	.artist_wrapper {
 		display: flex;
@@ -85,9 +87,9 @@ h6 {
 	}
 
 	h1 {
-		font-size: 16px;
+		font-size: 11px;
 		font-weight: 400;
-		line-height: 24px;
+		line-height: 16px;
 		color: rgb(255, 255, 255);
 	}
 
@@ -96,15 +98,15 @@ h6 {
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
-		font-size: 13px;
+		font-size: 10px;
 		font-weight: 400;
 		line-height: 16px;
 		margin-right: 0.5rem;
 	}
 
 	p {
-		font-size: 16px;
-		margin-right: 16px;
+		font-size: 12px;
+		margin-right: -12px;
 		margin-top: 5px;
 		font-weight: 700;
 		color: rgb(179, 179, 179);
@@ -122,4 +124,8 @@ h6 {
 		flex-shrink: 0;
 		object-position: center center;
 	}
+}
+
+.media_artists_wrapper {
+	max-width: 40%;
 }
