configuring TMDB Api to show relevent list of movies

--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -13,6 +13,31 @@
 	align-items: center;
 	flex-direction: column;
 }
+.ant-carousel .slick-prev,
+.ant-carousel .slick-next,
+.ant-carousel .slick-prev:hover,
+.ant-carousel .slick-next:hover,
+.ant-carousel .slick-prev:focus,
+.ant-carousel .slick-next:focus {
+	font-size: inherit;
+	color: white !important;
+}
+
+.ant-carousel .slick-prev::before {
+	color: white !important;
+}
+
+.slick-arrow.slick-prev {
+	font-size: 20px !important;
+}
+
+.ant-carousel .slick-next::before {
+	color: white !important;
+}
+
+.slick-arrow.slick-next {
+	font-size: 20px !important;
+}
 
 header {
 	border-bottom: white solid 1px;
