--- a/src/Sass/main_layout.scss
+++ b/src/Sass/main_layout.scss
@@ -42,7 +42,23 @@ Header > h1 {
 	align-items: center;
 	justify-self: center;
 } */
+// .ant-carousel .slick-prev,
+// .ant-carousel .slick-prev:hover {
+// 	left: 10px;
+// 	z-index: 2;
+// 	color: white;
+// 	font-size: 20px;
+// 	height: 30px;
+// }
 
+// .ant-carousel .slick-next,
+// .ant-carousel .slick-next:hover {
+// 	right: 10px;
+// 	z-index: 2;
+// 	color: white;
+// 	font-size: 20px;
+// 	height: 30px;
+// }
 .title {
 	font-size: 14px;
 	font-weight: bold;
