--- a/src/Sass/media_details.scss
+++ b/src/Sass/media_details.scss
@@ -74,14 +74,14 @@ h6 {
 		height: 100vh;
 		.main_spotify_track_wrapper {
 			width: 100%;
-			height: 66%;
+			height: auto;
 			margin-bottom: 1rem;
 			display: flex;
 			flex-wrap: wrap;
 			.spotify_tracks {
 				display: flex;
 				width: 5rem;
-				margin: 0.5rem;
+				margin: 1rem;
 				box-shadow: 0px 0px 10px rgb(73 73 73);
 				transition: 50ms;
 				cursor: pointer;
@@ -242,7 +242,16 @@ h6 {
 		}
 		.details_artist_top_tracks {
 			width: 23rem;
-			margin-top: -9rem;
+			margin-top: -15rem;
+			// padding-left: 3rem;
+			p {
+				margin-bottom: 0;
+				font-weight: 100;
+				// text-align: right;
+				color: darkgrey;
+				white-space: nowrap;
+				font-size: small;
+			}
 		}
 	}
 }
