alpha build flixter

--- a/src/Sass/App.scss
+++ b/src/Sass/App.scss
@@ -1,45 +1,10 @@
 .App {
 	width: 100%;
-	height: 100%;
+	height: 117vw;
 	background-color: black;
 	color: white;
 	display: flex;
 	flex-direction: column;
-	height: 143vh;
-}
-
-.logo {
-	width: 30px;
-	height: 30px;
-	border-radius: 30px;
-	position: absolute;
-	background: -webkit-gradient(
-		linear,
-		left top,
-		left bottom,
-		from(#5cf037),
-		to(#fae62d)
-	);
-	background: linear-gradient(#5cf037, #fae62d);
-	background: linear-gradient(#5cf037, #fae62d);
-	-webkit-transition: box-shadow 1s;
-	transition: box-shadow 1s;
-	text-align: center;
-	color: #fff;
-	font-size: 15px;
-	line-height: 31px;
-	font-weight: 700;
-	z-index: 1001;
-	top: 19px;
-	left: 33px;
-}
-
-.pageTitle {
-	color: #fff;
-	font-size: 38px;
-	margin: 24px 0 18px;
-	line-height: 1em;
-	font-weight: 700;
 }
 
 .wrapper {
