--- a/src/Sass/media_details.scss
+++ b/src/Sass/media_details.scss
@@ -22,7 +22,7 @@ h6 {
 }
 
 .ant-layout {
-	background-image: linear-gradient(#3f3d58, #060140);
+	background-image: linear-gradient(#3f3d58, #060140) !important;
 	display: flex;
 	height: 117vw;
 	margin: 0px;
