--- a/src/Sass/main_layout.scss
+++ b/src/Sass/main_layout.scss
@@ -40,6 +40,28 @@
 	top: 22px;
 	left: 33px;
 }
+
+.logout {
+	position: absolute;
+	right: 0;
+	margin-top: -3.5rem;
+	margin-right: 6rem;
+
+	button {
+		background-color: #5cf037;
+		color: black;
+		font-size: 13px;
+		font-weight: 700;
+		border-radius: 32px;
+		margin: 16px 0;
+		padding: 8px 36px;
+		text-align: center;
+		text-transform: uppercase;
+		cursor: pointer;
+		box-shadow: none;
+		border: none;
+	}
+}
 .pageTitle {
 	color: #fff;
 	font-size: 38px;
